--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Damir</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/agency.min.css" rel="stylesheet">
+    <!-- <link href="css/agency.min.css" rel="stylesheet"> -->
+    <link href="css/agency.css" rel="stylesheet">
 
   </head>
 
@@ -61,7 +62,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To my page!</div>
+          <div class="intro-lead-in">Welcome to my page!</div>
           <div class="intro-heading text-uppercase">It's Nice To Have You Here</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
         </div>
@@ -242,11 +243,15 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4>New Milenium and my first PC!</h4>
+                    <h4 class="subheading">GeForce baby</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">
+                      I went to the high school "Mihajlo Pupin" in Indjija.
+                      Title was "Electrotechnician Of Computers" 
+                      
+                      </p>
                   </div>
                 </div>
               </li>
@@ -528,7 +533,7 @@
                   <h2 class="text-uppercase">EMI</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt=""> -->
-                  <iframe width="960" height="480" 
+                  <iframe  height="480" 
                   src="http://kafaemi.co.nf/" 
                   frameborder="0" allowfullscreen></iframe>
                   <br/>
@@ -640,7 +645,7 @@
         </div>
       </div>
     </div>
-
+  
     <!-- Modal 4 -->
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
@@ -652,18 +657,26 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="col-lg-12 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Maids Los Angeles</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <iframe width="1000" height="480" 
+                  src="http://www.friendlymaidserviceslosangeles.com/" 
+                  frameborder="0" allowfullscreen></iframe>
+                  <br/>
+                  <hr/>
+                  <p>This page is built with clean HTML and CSS, with some jQuery .            
+                  </p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>jQuery</li>
                   </ul>
+                  <a href="http://www.friendlymaidserviceslosangeles.com/">
+                    <button class="btn btn-success" type="button"> 
+                    Open</button> </a>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -685,22 +698,30 @@
             </div>
           </div>
           <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
+              <div class="row">
+                <div class="col-lg-12 mx-auto">
+                  <div class="modal-body">
+                    <!-- Project Details Go Here -->
+                    <h2 class="text-uppercase">Maids Las Vegas</h2>
+                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    <iframe width="1000" height="480" 
+                    src="http://www.friendlymaidserviceslasvegas.com/" 
+                    frameborder="0" allowfullscreen></iframe>
+                    <br/>
+                    <hr/>
+                    <p>This page is built with clean HTML and CSS, with some jQuery .            
+                    </p>
+                    <ul class="list-inline">
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>jQuery</li>
+                    </ul>
+                    <a href="http://www.friendlymaidserviceslasvegas.com/">
+                      <button class="btn btn-success" type="button"> 
+                      Open</button> </a>
+                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                      <i class="fa fa-times"></i>
+                      Close Project</button>
                 </div>
               </div>
             </div>
@@ -719,22 +740,30 @@
             </div>
           </div>
           <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
+              <div class="row">
+                <div class="col-lg-12 mx-auto">
+                  <div class="modal-body">
+                    <!-- Project Details Go Here -->
+                    <h2 class="text-uppercase">Maids Las Vegas</h2>
+                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    <iframe width="1000" height="480" 
+                    src="http://scl.co.rs/" 
+                    frameborder="0" allowfullscreen></iframe>
+                    <br/>
+                    <hr/>
+                    <p>This page is built with clean HTML and CSS, with some jQuery .            
+                    </p>
+                    <ul class="list-inline">
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>jQuery</li>
+                    </ul>
+                    <a href="http://scl.co.rs/">
+                      <button class="btn btn-success" type="button"> 
+                      Open</button> </a>
+                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                      <i class="fa fa-times"></i>
+                      Close Project</button>
                 </div>
               </div>
             </div>
