--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Damir</title>
+    <title>Damir Pjetlović</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -124,11 +124,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.png" alt="">
+              <img class="img-fluid" src="img/portfolio/emi_thumb4:3-2.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
-              <p class="text-muted">Illustration</p>
+              <h4>EMI Coffee</h4>
+              <p class="text-muted">Design and front end</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -138,11 +138,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/turkey_thumb4:3.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
+              <h4>Turkey Start</h4>
+              <p class="text-muted">Front end</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -152,11 +152,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/sway_thumb4:3.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>Sway Water</h4>
+              <p class="text-muted">Front end</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -166,11 +166,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/maidLA_thumb.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>Maids Los Angeles</h4>
+              <p class="text-muted">Front end</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -180,15 +180,61 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/maidLV_thumb.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
+              <h4>Maids Las Vegas</h4>
+              <p class="text-muted">Front end</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/maids_LT_thumb.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Maids Lake Tahoe</h4>
+              <p class="text-muted">Photography</p>
+            </div>
+          </div>
+        <!-- </div> -->
+
+        <!-- ------------------------- -->
+
+        <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/scl_thumb1.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Smart Cargo</h4>
+              <p class="text-muted">Front end and back end</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/maidLV_thumb.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Maids Las Vegas</h4>
+              <p class="text-muted">Front end</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -202,6 +248,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </section>
 
@@ -249,7 +296,10 @@
                   <div class="timeline-body">
                     <p class="text-muted">
                       I went to the high school "Mihajlo Pupin" in Indjija.
-                      Title was "Electrotechnician Of Computers" 
+                      Title was "Electrotechnician Of Computers". 
+                      Some of the subjects i loved some hated. Unlike Elementary school 
+                      where i had highest grades with litle or no effort, and even get to some
+                      math competitions, high school was a bit of a challenge.  
                       
                       </p>
                   </div>
@@ -732,6 +782,48 @@
 
     <!-- Modal 6 -->
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                <div class="rl"></div>
+              </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                  <div class="col-lg-12 mx-auto">
+                    <div class="modal-body">
+                      <!-- Project Details Go Here -->
+                      <h2 class="text-uppercase">Maids Lake Tahoe</h2>
+                      <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                      <iframe width="1000" height="480" 
+                      src="http://affordablemaidslaketahoe.com/index.html" 
+                      frameborder="0" allowfullscreen></iframe>
+                      <br/>
+                      <hr/>
+                      <p>This page is built with clean HTML and CSS, with some jQuery .            
+                      </p>
+                      <ul class="list-inline">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>jQuery</li>
+                      </ul>
+                      <a href="http://scl.co.rs/">
+                        <button class="btn btn-success" type="button"> 
+                        Open</button> </a>
+                      <button class="btn btn-primary" data-dismiss="modal" type="button">
+                        <i class="fa fa-times"></i>
+                        Close Project</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <!-- Modal 7 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -744,10 +836,10 @@
                 <div class="col-lg-12 mx-auto">
                   <div class="modal-body">
                     <!-- Project Details Go Here -->
-                    <h2 class="text-uppercase">Maids Las Vegas</h2>
+                    <h2 class="text-uppercase">Smart Cargo Logistics</h2>
                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                     <iframe width="1000" height="480" 
-                    src="http://scl.co.rs/" 
+                    src="http://scl.co.rs/index.html" 
                     frameborder="0" allowfullscreen></iframe>
                     <br/>
                     <hr/>
@@ -771,6 +863,52 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal 7 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                <div class="rl"></div>
+              </div>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-12 mx-auto ">
+                  <div class="modal-body">
+                    <!-- Project Details Go Here -->
+                    <h2 class="text-uppercase">EMI</h2>
+                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt=""> -->
+                    <iframe  height="480" 
+                    src="index.html" 
+                    frameborder="0" allowfullscreen></iframe>
+                    <br/>
+                    <hr/>
+                    <p>My first project. Logos and design are done by myself, with very limited coding knowledge that time.              
+                    </p>
+                    <hr/>
+                    <h4>Technologies used:</h4>
+                    <ul class="list-inline">
+                      <li>Photoshop</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
+                    <a href="index.html">
+                    <button class="btn btn-success" type="button"> 
+                    Open</button> </a>
+                    
+                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                      <i class="fa fa-times"></i>
+                      Close Project</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
