--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services">Technologies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -73,12 +73,12 @@
     </header>
 
     <!-- Services -->
-    <section id="services">
+    <section id="services" class="bg-techno">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Services</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Technologies</h2>
+            <h3 class="section-subheading text-muted">There are the ones i use the most</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -116,10 +116,8 @@
                things organised and allows you to create style sheets faster.</p>
           </div>
        
-
           <!-- ----------- -->
 
-          <!-- <div class="row text-center"> -->
           <div class="col-md-6 col-lg-4 technology-pad">
             <span class="fa-stack fa-3x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -164,7 +162,6 @@
 
               <!-- ----------- -->
 
-
           <div class="col-md-6 col-lg-4 technology-pad">
             <span class="fa-stack fa-3x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -206,7 +203,6 @@
                   linting, optimization, etc.</p>
             </div>
 
-
               <!-- ----------- -->
 
             <div class="col-md-6 col-lg-4 offset-lg-2 technology-pad">
@@ -215,12 +211,11 @@
                   <i class="fab fa-npm fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Npm</h4>
-                <p class="text-muted">npm is a package manager for the JavaScript programming language.
-                    <!-- It is the default package manager for the JavaScript runtime environment Node.js. -->
-                    It consists of a command line client, and an online database of
-                      packages, called the npm registry. 
-                      The registry is accessed via the client, and the available packages 
-                      can be browsed and searched via the npm website.</p>
+                <p class="text-muted">npm is a package manager for the JavaScript environment.
+                  It consists of a command line client, and an online database of
+                  packages, called the npm registry. 
+                  The registry is accessed via the client, and the available packages 
+                  can be browsed and searched via the npm website.</p>
             </div>
                 
             <div class="col-md-12 col-lg-4 technology-pad">
@@ -239,7 +234,7 @@
     </section>
 
     <!-- Portfolio Grid -->
-    <section class="bg-light" id="portfolio">
+    <section class="bg-portfolio" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -384,7 +379,7 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="bg-timeline">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -492,7 +487,7 @@
     </section>
 
     <!-- Team -->
-    <section class="bg-light" id="team">
+    <section class="bg-light bg-team" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
