--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Portfolio</h2>
+            <h2 class="section-heading text-uppercase portfolio-heading">Portfolio</h2>
             <h3 class="section-subheading text-muted">Check out some of my work</h3>
           </div>
         </div>
@@ -491,7 +491,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+            <h2 class="section-heading text-uppercase team-heading">Our Amazing Team</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
@@ -500,7 +500,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
               <h4>Kay Garland</h4>
-              <p class="text-muted">Lead Designer</p>
+              <p class="team-heading">Lead Designer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -610,7 +610,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
+            <h2 class="section-heading text-uppercase team-heading ">Contact Us</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
@@ -618,7 +618,7 @@
           <div class="col-lg-12">
             <form id="contactForm" name="sentMessage" novalidate>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 ">
                   <div class="form-group">
                     <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
                     <p class="help-block text-danger"></p>
