--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Damir Pjetlović</a>
+          <img class="mx-auto rounded-circle" style = "width:60px" src="img/sp_me.jpg" alt="">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"> &nbsp Damir Pjetlović</a>
+        
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -369,7 +371,7 @@
               <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Window</h4>
+              <h4>My Site</h4>
               <p class="text-muted">Photography</p>
             </div>
           </div>
@@ -990,8 +992,8 @@
       </div>
     </div>
 
-    <!-- Modal 7 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Modal 8 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -1028,6 +1030,48 @@
                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                       <i class="fa fa-times"></i>
                       Close Project</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal 9 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                <div class="rl"></div>
+              </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                  <div class="col-lg-12 mx-auto">
+                    <div class="modal-body">
+                      <!-- Project Details Go Here -->
+                      <h2 class="text-uppercase">Smart Cargo Logistics</h2>
+                      <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                      <iframe width="1000" height="480" 
+                      src="index.html" 
+                      frameborder="0" allowfullscreen></iframe>
+                      <br/>
+                      <hr/>
+                      <p>This page is built with clean HTML and CSS, with some jQuery .            
+                      </p>
+                      <ul class="list-inline">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>jQuery</li>
+                      </ul>
+                      <a href="index.html">
+                        <button class="btn btn-success" type="button"> 
+                        Open</button> </a>
+                      <button class="btn btn-primary" data-dismiss="modal" type="button">
+                        <i class="fa fa-times"></i>
+                        Close Project</button>
                   </div>
                 </div>
               </div>
