backgounds, portfolio, hobbies

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -259,7 +259,7 @@
               <p class="text-muted">Design and front end</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -273,7 +273,7 @@
               <p class="text-muted">Front end</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -287,7 +287,7 @@
               <p class="text-muted">Front end</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -301,7 +301,7 @@
               <p class="text-muted">Front end</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -315,7 +315,7 @@
               <p class="text-muted">Front end</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -329,11 +329,10 @@
               <p class="text-muted">Front end</p>
             </div>
           </div>
-        <!-- </div> -->
 
         <!-- ------------------------- -->
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -347,32 +346,35 @@
               <p class="text-muted">Front end and forms</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-6 col-sm-6 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/maidLV_thumb.jpg" alt="">
+              <img class="img-fluid" 
+              src="img/portfolio/mt41.png"
+              alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Maids Las Vegas</h4>
-              <p class="text-muted">Front end</p>
+              <h4>MT Gym</h4>
+              <p class="text-muted">Graphic</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
+
+          <div class="col-md-6 col-sm-6 offset-sm-3 col-lg-4 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/msps.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>My Site</h4>
-              <p class="text-muted">Photography</p>
+              <h4>Inception</h4>
+              <p class="text-muted">Font end and design</p>
             </div>
           </div>
         </div>
@@ -493,16 +495,19 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase team-heading">Our Amazing Team</h2>
+            <h2 class="section-heading text-uppercase hobbies-heading">My Hobbies</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-              <h4>Kay Garland</h4>
-              <p class="team-heading">Lead Designer</p>
+              <img class="mx-auto rounded-circle" src="img/hobbies/red-jackson1.jpg" alt="">
+              <h4 class = "hobbies-heading">Guitar Playing</h4>
+              <p class="text-muted">I've began playing guitar about 15 years ago. 
+                The first one i had was acoustic in terrible condition,
+                 however it had most of the strings and made sound, 
+                 so it let me learn some riffs and chords. </p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -524,9 +529,9 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Marketer</p>
+              <img class="mx-auto rounded-circle" src="img/hobbies/cat-lifting.jpg" alt="">
+              <h4 class = "hobbies-heading">Larry Parker</h4>
+              <p class="text-muted hobbies-heading ">Lead Marketer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -548,9 +553,9 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-              <h4>Diana Pertersen</h4>
-              <p class="text-muted">Lead Developer</p>
+              <img class="mx-auto rounded-circle" src="img/hobbies/motorcycle-road.jpg" alt="">
+              <h4 class = "hobbies-heading">Diana Pertersen</h4>
+              <p class="text-muted hobbies-heading ">Lead Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
