--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                   <h2 class="text-uppercase">EMI</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt=""> -->
-                  <iframe  height="480" 
+                  <iframe  height="480" width="100%"
                   src="http://kafaemi.co.nf/" 
                   frameborder="0" allowfullscreen></iframe>
                   <br/>
@@ -761,7 +761,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Turkey</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <iframe width="1200" height="480" 
+                  <iframe width="100%" height="480" 
                   src="http://turkishstart.co.nf/" 
                   frameborder="0" allowfullscreen></iframe>
                   <br/>
@@ -803,7 +803,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Sway Water</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <iframe width="1000" height="480" 
+                  <iframe width="100%" height="480" 
                   src="https://damirhub.github.io/sway/" 
                   frameborder="0" allowfullscreen></iframe>
                   <br/>
@@ -845,7 +845,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Maids Los Angeles</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <iframe width="1000" height="480" 
+                  <iframe width="100%" height="480" 
                   src="http://www.friendlymaidserviceslosangeles.com/" 
                   frameborder="0" allowfullscreen></iframe>
                   <br/>
@@ -887,7 +887,7 @@
                     <!-- Project Details Go Here -->
                     <h2 class="text-uppercase">Maids Las Vegas</h2>
                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                    <iframe width="1000" height="480" 
+                    <iframe width="100%" height="480" 
                     src="http://www.friendlymaidserviceslasvegas.com/" 
                     frameborder="0" allowfullscreen></iframe>
                     <br/>
@@ -929,7 +929,7 @@
                       <!-- Project Details Go Here -->
                       <h2 class="text-uppercase">Maids Lake Tahoe</h2>
                       <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                      <iframe width="1000" height="480" 
+                      <iframe width="100%" height="480" 
                       src="http://affordablemaidslaketahoe.com/index.html" 
                       frameborder="0" allowfullscreen></iframe>
                       <br/>
@@ -971,7 +971,7 @@
                     <!-- Project Details Go Here -->
                     <h2 class="text-uppercase">Smart Cargo Logistics</h2>
                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                    <iframe width="1000" height="480" 
+                    <iframe width="100%" height="480" 
                     src="http://scl.co.rs/index.html" 
                     frameborder="0" allowfullscreen></iframe>
                     <br/>
@@ -1014,7 +1014,7 @@
                     <h2 class="text-uppercase">EMI</h2>
                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                     <!-- <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt=""> -->
-                    <iframe  height="480" 
+                    <iframe width="100%" height="480" 
                     src="index.html" 
                     frameborder="0" allowfullscreen></iframe>
                     <br/>
@@ -1059,7 +1059,7 @@
                       <!-- Project Details Go Here -->
                       <h2 class="text-uppercase">Smart Cargo Logistics</h2>
                       <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                      <iframe width="1000" height="480" 
+                      <iframe width="100%" height="480" 
                       src="index.html" 
                       frameborder="0" allowfullscreen></iframe>
                       <br/>
